tests/negative/typecheck/not.orng
fn main() -> Int {not true}